	PR gold/15662 	* powerpc.cc (Output_data_brlt_powerpc::reset_brlt_sizes): New 	function. 	(Output_data_brlt_powerpc::finalize_brlt_sizes): New function. 	(Target_powerpc::do_relax): Call the above.